--- a/branches/vinculacion/.classpath
+++ b/branches/vinculacion/.classpath
@@ -63,5 +63,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/retrotranslator-transformer-1.2.8.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xwork-core-2.3.8.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts-annotations-1.0.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-dbutils-1.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
