--- a/branches/vinculacion/WebContent/WEB-INF/web.xml
+++ b/branches/vinculacion/WebContent/WEB-INF/web.xml
@@ -27,6 +27,7 @@
 			/WEB-INF/config/spring/errores-context.xml
 			/WEB-INF/config/spring/vinculacion-context.xml
 			/WEB-INF/config/spring/tractoras-context.xml
+			/WEB-INF/config/spring/init-context.xml
         </param-value>
 	</context-param>
 
