actualizaion funcionalidad requerimientos

--- a/WebContent/WEB-INF/config/log4j/log4j.properties
+++ b/WebContent/WEB-INF/config/log4j/log4j.properties
@@ -38,49 +38,9 @@ log4j.appender.vinculacion.MaxBackupIndex=3
 log4j.appender.vinculacion.layout=org.apache.log4j.PatternLayout
 log4j.appender.vinculacion.layout.ConversionPattern=%-5p - [%d{DATE}] - [%32t] - [%51C{1}\:%4L] - %m%n
 
-#log4j.appender.apache=org.apache.log4j.RollingFileAppender
-#log4j.appender.apache.RollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-#log4j.appender.apache.File=../logs/apache.log
-#log4j.appender.apache.MaxFileSize=10MB
-#log4j.appender.apache.MaxBackupIndex=3
-#log4j.appender.apache.layout=org.apache.log4j.PatternLayout
-#log4j.appender.apache.layout.ConversionPattern=%-5p - [%d{DATE}] - [%32t] - [%51C{1}\:%4L] - %m%n
-#
-#log4j.appender.app=org.apache.log4j.RollingFileAppender
-#log4j.appender.app.RollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-#log4j.appender.app.File=../logs/app.log
-#log4j.appender.app.MaxFileSize=10MB
-#log4j.appender.app.MaxBackupIndex=3
-#log4j.appender.app.layout=org.apache.log4j.PatternLayout
-#log4j.appender.app.layout.ConversionPattern=%-5p - [%d{DATE}] - [%32t] - [%51C{1}\:%4L] - %m%n
-#
-#log4j.appender.app=org.apache.log4j.RollingFileAppender
-#log4j.appender.app.RollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-#log4j.appender.app.File=../logs/app.log
-#log4j.appender.app.MaxFileSize=10MB
-#log4j.appender.app.MaxBackupIndex=3
-#log4j.appender.app.layout=org.apache.log4j.PatternLayout
-#log4j.appender.app.layout.ConversionPattern=%-5p - [%d{DATE}] - [%32t] - [%51C{1}\:%4L] - %m%n
-
-#log4j.appender.opensymphony=org.apache.log4j.RollingFileAppender
-#log4j.appender.opensymphony.RollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-#log4j.appender.opensymphony.File=../logs/opensymphony.log
-#log4j.appender.opensymphony.MaxFileSize=10MB
-#log4j.appender.opensymphony.MaxBackupIndex=3
-#log4j.appender.opensymphony.layout=org.apache.log4j.PatternLayout
-#log4j.appender.opensymphony.layout.ConversionPattern=%-5p - [%d{DATE}] - [%32t] - [%51C{1}\:%4L] - %m%n
-#
-#log4j.appender.springframework=org.apache.log4j.RollingFileAppender
-#log4j.appender.springframework.RollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-#log4j.appender.springframework.File=../logs/springframework.log
-#log4j.appender.springframework.MaxFileSize=10MB
-#log4j.appender.springframework.MaxBackupIndex=3
-#log4j.appender.springframework.layout=org.apache.log4j.PatternLayout
-#log4j.appender.springframework.layout.ConversionPattern=%-5p - [%d{DATE}] - [%32t] - [%51C{1}\:%4L] - %m%n
-
 # stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.MaxFileSize=10MB
+log4j.appender.stdout.MaxBackupIndex=3
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
-# Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%-5p - [%d{DATE}] - [%32t] - [%51C{1}\:%4L] - %m%n
