--- a/branches/vinculacion/.classpath
+++ b/branches/vinculacion/.classpath
@@ -64,5 +64,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xwork-core-2.3.8.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts-annotations-1.0.5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-dbutils-1.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mail.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/sslext-1.2-0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
