--- a/WebContent/WEB-INF/config/log4j/log4j.properties
+++ b/WebContent/WEB-INF/config/log4j/log4j.properties
@@ -1,7 +1,7 @@
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=WARN, stdout
 
 #categoria
-log4j.category.org.apache=DEBUG, apach2e
+log4j.category.org.apache=WARN, apach2e
 log4j.category.com.opensymphony=DEBUG, opensymphony
 log4j.category.org.springframework=DEBUG, springframework
 log4j.category.mx.com.vgati=DEBUG, vinculacion
