--- a/branches/vinculacion/WebContent/WEB-INF/config/log4j/log4j.properties
+++ b/branches/vinculacion/WebContent/WEB-INF/config/log4j/log4j.properties
@@ -5,6 +5,7 @@ log4j.category.org.apache=WARN, apache
 log4j.category.com.opensymphony=DEBUG, opensymphony
 log4j.category.org.springframework=DEBUG, springframework
 log4j.category.mx.com.vgati=DEBUG, vinculacion
+log4j.category.org.apache.tiles=WARN, tiles
 
 #apache
 log4j.appender.apache=org.apache.log4j.RollingFileAppender
@@ -37,6 +38,14 @@ log4j.appender.vinculacion.MaxFileSize=10MB
 log4j.appender.vinculacion.MaxBackupIndex=3
 log4j.appender.vinculacion.layout=org.apache.log4j.PatternLayout
 log4j.appender.vinculacion.layout.ConversionPattern=%-5p - [%d{DATE}] - [%32t] - [%51C{1}\:%4L] - %m%n
+
+#tiles
+log4j.appender.tiles=org.apache.log4j.RollingFileAppender
+log4j.appender.tiles.File=../logs/tiles.log
+log4j.appender.tiles.MaxFileSize=10MB
+log4j.appender.tiles.MaxBackupIndex=3
+log4j.appender.tiles.layout=org.apache.log4j.PatternLayout
+log4j.appender.tiles.layout.ConversionPattern=%-5p - [%d{DATE}] - [%32t] - [%51C{1}\:%4L] - %m%n
 
 # stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
