--- a/WebContent/WEB-INF/config/log4j/log4j.properties
+++ b/WebContent/WEB-INF/config/log4j/log4j.properties
@@ -2,8 +2,8 @@ log4j.rootLogger=WARN, stdout
 
 #categoria
 log4j.category.org.apache=WARN, apache
-log4j.category.com.opensymphony=DEBUG, opensymphony
-log4j.category.org.springframework=DEBUG, springframework
+log4j.category.com.opensymphony=WARN, opensymphony
+log4j.category.org.springframework=WAR, springframework
 log4j.category.mx.com.vgati=DEBUG, vinculacion
 log4j.category.org.apache.tiles=WARN, tiles
 
