se separan los scripts de carga de datos

--- a/rsc/.project
+++ b/rsc/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>vinculacion.rsc</name>
-	<comment></comment>
+	<comment>Scripts de BD SIA CCMX</comment>
 	<projects>
 	</projects>
 	<buildSpec>
