--- a/.classpath
+++ b/.classpath
@@ -67,5 +67,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jdt-compiler-3.1.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts2-jasperreports-plugin-2.0.11.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts2-json-plugin-2.1.8.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/vgatiframework_v1.0.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
