--- a/rsc/db/secuencia.properties
+++ b/rsc/db/secuencia.properties
@@ -1,11 +1,14 @@
 #secuencia de ejecución:
 
-1. SIACCMX.sql
-2. INSERT_INFRA_CAT_INDICADORES_TRACTORA.sql
-3. INSERT_INFRA_CAT_SCIAN_CCMX.sql
-4. INSERT_INFRA_DIPLOMADOS.sql
-5. INSERT_INFRA_SESIONES.sql
-6. cargaTractorasSIACCMX.sql
-7. cargaPyMEsSIACCMX.sql
-8. cargaServDiplomadoSIACCMX.sql
-9. 
+1 SIACCMX.sql
+2 INSERT_INFRA_CAT_INDICADORES_TRACTORA.sql
+3 INSERT_INFRA_CAT_SCIAN_CCMX.sql
+4 INSERT_INFRA_DIPLOMADOS.sql
+5 INSERT_INFRA_SESIONES.sql
+6 cargaTractorasSIACCMX.sql
+7 cargaPyMEsSIACCMX.sql
+8 cargaServDiplomadoSIACCMX.sql
+9 cargaServConsultoriasSIACCMX.sql
+10 cargaConsultores1.sql
+11 cargaConsultores2.sql
+12 cargaServConsultoriaSIACCMX.sql
